fix message text overflow

--- a/src/message.scss
+++ b/src/message.scss
@@ -4,6 +4,7 @@
   margin: 5px 0;
   display: flex;
   align-items: center;
+  overflow-wrap: anywhere;
 
   &:hover {
     background-color: #32353B;
